Bug 1384492 - Notify storage pressure in CheckTemporaryStorageLimits. r=janv