dom/quota/ActorsParent.cpp
@@ -370,24 +370,6 @@ private:
   ~DirectoryLockImpl();
 };
 
-class QuotaObject::StoragePressureRunnable final
-  : public Runnable
-{
-  const uint64_t mUsage;
-
-public:
-  explicit StoragePressureRunnable(uint64_t aUsage)
-    : Runnable("dom::quota::QuotaObject::StoragePressureRunnable")
-    , mUsage(aUsage)
-  { }
-
-private:
-  ~StoragePressureRunnable()
-  { }
-
-  NS_DECL_NSIRUNNABLE
-};
-
 class QuotaManager::CreateRunnable final
   : public BackgroundThreadObject
   , public Runnable
@@ -1388,6 +1370,23 @@ private:
 
   void
   GetResponse(RequestResponse& aResponse) override;
+};
+
+class StoragePressureRunnable final
+  : public Runnable
+{
+  const uint64_t mUsage;
+
+public:
+  explicit StoragePressureRunnable(uint64_t aUsage)
+    : Runnable("dom::quota::QuotaObject::StoragePressureRunnable")
+    , mUsage(aUsage)
+  { }
+
+private:
+  ~StoragePressureRunnable() = default;
+
+  NS_DECL_NSIRUNNABLE
 };
 
 /*******************************************************************************
@@ -2872,30 +2871,6 @@ ShutdownObserver::Observe(nsISupports* aSubject,
  * Quota object
  ******************************************************************************/
 
-NS_IMETHODIMP
-QuotaObject::
-StoragePressureRunnable::Run()
-{
-  MOZ_ASSERT(NS_IsMainThread());
-
-  nsCOMPtr<nsIObserverService> obsSvc = mozilla::services::GetObserverService();
-  if (NS_WARN_IF(!obsSvc)) {
-    return NS_ERROR_FAILURE;
-  }
-
-  nsCOMPtr<nsISupportsPRUint64> wrapper =
-    do_CreateInstance(NS_SUPPORTS_PRUINT64_CONTRACTID);
-  if (NS_WARN_IF(!wrapper)) {
-    return NS_ERROR_FAILURE;
-  }
-
-  wrapper->SetData(mUsage);
-
-  obsSvc->NotifyObservers(wrapper, "QuotaManager::StoragePressure", u"");
-
-  return NS_OK;
-}
-
 void
 QuotaObject::AddRef()
 {
@@ -3036,13 +3011,11 @@ QuotaObject::MaybeUpdateSize(int64_t aSize, bool aTruncate)
       quotaManager->LockedCollectOriginsForEviction(delta, locks);
 
     if (!sizeToBeFreed) {
+      uint64_t usage = quotaManager->mTemporaryStorageUsage;
+
       MutexAutoUnlock autoUnlock(quotaManager->mQuotaMutex);
 
-      // Notify pressure event.
-      RefPtr<StoragePressureRunnable> storagePressureRunnable =
-        new StoragePressureRunnable(quotaManager->mTemporaryStorageUsage);
-
-      MOZ_ALWAYS_SUCCEEDS(NS_DispatchToMainThread(storagePressureRunnable));
+      quotaManager->NotifyStoragePressure(usage);
 
       return false;
     }
@@ -5288,6 +5261,17 @@ QuotaManager::GetGroupUsageAndLimit(const nsACString& aGroup,
   }
 }
 
+void
+QuotaManager::NotifyStoragePressure(uint64_t aUsage)
+{
+  mQuotaMutex.AssertNotCurrentThreadOwns();
+
+  RefPtr<StoragePressureRunnable> storagePressureRunnable =
+    new StoragePressureRunnable(aUsage);
+
+  MOZ_ALWAYS_SUCCEEDS(NS_DispatchToMainThread(storagePressureRunnable));
+}
+
 // static
 void
 QuotaManager::GetStorageId(PersistenceType aPersistenceType,
@@ -5673,6 +5657,11 @@ QuotaManager::CheckTemporaryStorageLimits()
   for (const OriginParams& doomedOrigin : doomedOrigins) {
     OriginClearCompleted(doomedOrigin.mPersistenceType,
                          doomedOrigin.mOrigin);
+  }
+
+  if (mTemporaryStorageUsage > mTemporaryStorageLimit) {
+    // If disk space is still low after origin clear, notify storage pressure.
+    NotifyStoragePressure(mTemporaryStorageUsage);
   }
 }
 
@@ -6309,6 +6298,29 @@ SaveOriginAccessTimeOp::SendResults()
 #ifdef DEBUG
   NoteActorDestroyed();
 #endif
+}
+
+NS_IMETHODIMP
+StoragePressureRunnable::Run()
+{
+  MOZ_ASSERT(NS_IsMainThread());
+
+  nsCOMPtr<nsIObserverService> obsSvc = mozilla::services::GetObserverService();
+  if (NS_WARN_IF(!obsSvc)) {
+    return NS_ERROR_FAILURE;
+  }
+
+  nsCOMPtr<nsISupportsPRUint64> wrapper =
+    do_CreateInstance(NS_SUPPORTS_PRUINT64_CONTRACTID);
+  if (NS_WARN_IF(!wrapper)) {
+    return NS_ERROR_FAILURE;
+  }
+
+  wrapper->SetData(mUsage);
+
+  obsSvc->NotifyObservers(wrapper, "QuotaManager::StoragePressure", u"");
+
+  return NS_OK;
 }
 
 /*******************************************************************************
